<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asistencia R.A.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Salir</string>
    <string name="button_login">Iniciar Sesión</string>
    <string name="action_setting">Configuraciones</string>

    <!-- Menu -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Ingreso al Local</string>
    <string name="title_section3">Asistencia en Aula</string>
    <string name="title_section4">Inventario de Ficha</string>
    <string name="title_section5">Inventario de Cuadernillo</string>
    <string name="title_section6">Listado de Asistencia a Local</string>
    <string name="title_section7">Listado de Asistencia a Aula</string>
    <string name="title_section8">Listado de Inventario Ficha</string>
    <string name="title_section9">Listado de Inventario Cuadernillo</string>
    <string name="title_section10">Reporte General</string>
    <string name="title_section11">Consulta de datos del Postulante</string>
    <string name="title_section_12">Asistencia de personal</string>
    <string name="title_section_13">Reemplazar Personal</string>
    <string name="title_section_14">Cambiar Cargo</string>
    <string name="title_section_15">Reporte de Asistencia</string>
    <string name="title_section_16">Consulta de Encargado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- /Menu -->

    <!-- HttpPostAux -->
    <string name="httppostaux_msg_error_conexion">Error: Falló la conexión con la nube!</string>
    <string name="httppostaux_msg_error_data">Error: Problemas con datos en la nube!</string>
    <!-- /HttpPostAux -->


    <!-- Login -->
    <string name="inei_content_description">INEI</string>
    <string name="password_text_hint">Password</string>
    <string name="button_login_text">Iniciar Sesión</string>
    <string name="login_msg">Autenticando Sesión...</string>
    <string name="login_msg_error_password">Error: El password es incorrecto!</string>
    <string name="login_msg_error_data">Error: Problemas en el checking del login!</string>
    <string name="login_msg_error_register">Error: Falló registro de login!</string>
    <!-- /Login -->


    <!-- UbigeoVerify -->
    <string name="verify_usuario">Usuario</string>
    <string name="verify_nombre_local">Nombre de la I.E</string>
    <string name="verify_numero_aulas">Número de Aulas</string>
    <string name="verify_numero_contingencia">Número de Aulas de Contingencia</string>
    <string name="verify_sede">Sede</string>
    <string name="verify_error_query">Error: Falló al acceder a la información!</string>
    <string name="verify_error_data">Error: No se encontraron datos!</string>
    <string name="title_ubigeo_activity">Verificación de Local de Aplicación</string>
    <!-- /UbigeoVerify -->


    <!-- Versión -->
    <string name="version_validate">Validando versión del padrón!</string>
    <string name="version_error_local">Error: Problemas al acceder a la versión actual!</string>
    <string name="version_error_check">Error: No se pudo verificar la versión!</string>
    <string name="version_error_register">Error: No se pudo registrar la versión!</string>
    <string name="version_error_not_data">Error: El Aplicativo no cuenta con un Padrón!</string>
    <!-- /Versión -->


    <!-- Padrón -->
    <string name="padron_msg_download">Descargando Padrón. Esto puede tomar varios minutos!</string>
    <string name="padron_btn_text">Descargar Padrón</string>
    <string name="padron_msg_error_local">Error: Problemas para acceder a BD local</string>
    <string name="padron_msg_error_data">Error: No hay padron del Local!</string>
    <string name="padron_msg_error_clean">Error: Problemas al Limpiar BD</string>
    <string name="padron_msg_error_register">Error: No se pudo registrar el padrón!</string>
    <!-- /Padrón -->


    <!-- Ingreso al Local -->
    <string name="numero_documento">Número de DNI :</string>
    <string name="numero_documento_text_hint">ej: 06979411</string>
    <string name="numero_documento_abrev">DNI :</string>
    <string name="apellido_paterno_text_hint">Apellido Paterno</string>
    <string name="apellido_materno_text_hint">Apellido Materno</string>
    <string name="nombres_text_hint">Nombres</string>
    <string name="local_de_aplicacion">Local de Aplicación</string>
    <string name="aula_aplicacion">Aula</string>
    <string name="aula_aplicacion_text_hint">Nro</string>
    <string name="apellidos_text_hint">Apellidos Completos</string>
    <!-- /Ingreso al Local -->


    <!-- Asistencia -->
    <string name="docente_register">Se registró correctamente</string>
    <string name="docente_found">Buscando Datos del Docente</string>
    <string name="docente_not_found">El docente no pertenece al local de aplicación!</string>
    <string name="docente_not_access">Error. Problemas al acceder a la BD!</string>
    <string name="docente_not_register_local">Error. No se registro asistencia del docente al local!</string>
    <string name="docente_not_register_aula">Error. No se registro asistencia del docente en aula!</string>
    <string name="docente_double_register">El docente ya fue registrado</string>
    <string name="docente_sync">Sincronizando, espere unos segundos</string>
    <string name="docente_aula_not_found">El docente no se encuentra en el aula de aplicación</string>
    <!-- /Asistencia -->

    <!-- Asistencia Personal-->
    <string name="personal_register">Se registró correctamente</string>
    <string name="personal_found">Buscando Datos del Personal</string>
    <string name="personal_not_found">El personal no pertenece al local de aplicación!</string>
    <string name="personal_not_access">Error. Problemas al acceder a la BD!</string>
    <string name="personal_not_register_local">Error. No se registro asistencia del personal!</string>
    <string name="personal_double_register">El personal ya fue registrado</string>
    <string name="personal_sync">Sincronizando, espere unos segundos</string>
    <string name="personal_correct">Personal encontrado</string>
    <string name="personal_double_reemp">El personal ya fue reemplazado anteriormente</string>
    <!-- /Asistencia Personal-->


    <!-- Fichas / Cuadernillo -->
    <string name="numero_ficha">Número de Ficha :</string>
    <string name="codigo_ficha">Código de Ficha :</string>
    <string name="nro_ficha">Número de Ficha</string>
    <string name="label_cuadernillo">Cuadernillo :</string>
    <string name="codigo_cuadernillo">Cod. Cuadernillo :</string>
    <string name="ie_cuadernillo">00000</string>
    <string name="instrumento_not_found">El instrumento no pertenece a esta aula!</string>
    <string name="instrumento_not_access">Error. 0Problemas al acceder a la BD!</string>
    <string name="instrumento_not_register">Error. No se registro inventario de instrumento!</string>
    <string name="instrumento_double_register">El instrumento ya fue registrado</string>
    <string name="instrumento_register">El instrumento se registró correctamente</string>
    <!-- Ficha / Cuadernillo -->


    <!-- Array de Aulas (Prueba) -->
    <string-array name="aulas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <!-- /Array de Aulas (Prueba) -->

    <!-- ListView (Prueba) -->
    <string name="test">test</string>
    <string name="title_dni">Nro DNI</string>
    <string name="title_codigo">Código</string>
    <string name="title_nombre_completo">Nombres y Apellidos</string>
    <string name="title_aula">Nro Aula</string>
    <string name="title_fecha_hora">Fecha y Hora</string>
    <string name="display_dni">Nro DNI</string>
    <string name="display_codigo">Código</string>
    <string name="display_nombre_completo">Nombres y Apellidos</string>
    <string name="display_nro_aula">Nro Aula</string>
    <string name="display_fechahora">Fecha y Hora</string>
    <string name="display">Mostrando %1$s de %2$s</string>
    <!-- /ListView (Prueba) -->

    <string name="title_activity_settings">Configuraciones</string>

    <!-- /Settigns Activity  -->
    <string name="clear_data_local">Borrar datos locales</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- /Settigns Activity  -->

</resources>
