<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/title_dni"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:background="@color/button_background" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/title_codigo"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:background="@color/button_background" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/title_nombre_completo"
        android:gravity="center"
        android:background="@color/button_background" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/title_aula"
        android:gravity="center"
        android:background="@color/button_background" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:text="@string/title_fecha_hora"
        android:gravity="center"
        android:background="@color/button_background" />


</LinearLayout>